# ssl-tun-tunnel

./: .gitignore  COPYING  PROTOCOL.md  README.md  pyproject.toml
.github/workflows/: android.yml  release.yml  test.yml
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/ssltuntunnel/: MainActivity.kt  ProtocolEngine.kt  VpnTunnelService.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/mipmap/: ic_launcher_round.xml
android/app/src/main/res/values/: arrays.xml  strings.xml
src/ssl_tun_tunnel/: __init__.py  __main__.py  config.toml.example  error.html  status.html  tunnel.py
tests/: test_framing.py  test_tunnel.py  test_utils.py
