[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ssl-tun-tunnel"
version = "0.5.0"
authors = [
  { name="SSL TUN Tunnel Team", email="frbrgeorge@gmail.com" },
]
description = "A Python-based SSL TUN device tunnel"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
"Homepage" = "https://github.com/FrBrGeorge/ssl-tun-tunnel"
"Bug Tracker" = "https://github.com/FrBrGeorge/ssl-tun-tunnel/issues"

[tool.setuptools.package-data]
"ssl_tun_tunnel" = ["*.toml.example", "*.html"]

[project.scripts]
ssl-tun-tunnel = "ssl_tun_tunnel.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
